--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.1",
     "@faker-js/faker": "^9.6.0",
-    "@prisma/client": "^6.3.1",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-popover": "^1.1.5",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.5",
-    "@radix-ui/react-separator": "^1.1.1",
+    "@prisma/client": "^5.12.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@supabase/supabase-js": "^2.48.1",
+    "@supabase/supabase-js": "^2.42.5",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -32,7 +33,7 @@
     "next": "14.2.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
